--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@emotion/react": "^11.11.3",
 		"@emotion/styled": "^11.11.0",
 		"@mui/material": "^5.15.5",
+		"@okxweb3/crypto-lib": "^1.0.1",
 		"axios": "^1.6.5",
 		"bip32": "^4.0.0",
 		"bip39": "^3.1.0",
